--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,7 @@
   font-size: 72px;
   font-weight: 900;
   line-height: 1.06;
-  color: #FFFFFF;
+  color:black;
 }
 
 @media screen and (max-width: 1023px) {
