--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,7 @@
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
