--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,7 +3,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 1.1;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
