--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,7 +2,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.1;
-  color: #ffffff;
+  color: black;
   text-decoration: none;
   transition: opacity 0.5s linear;
 }
