--- a/blocks/footer/__navigation/footer__navigation.css
+++ b/blocks/footer/__navigation/footer__navigation.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 18px;
+  margin-top:25px;
 }
 
 @media screen and (max-width: 767px) {
@@ -9,4 +10,5 @@
     flex-direction: column;
     gap: 32px;
   }
+ 
 }
