--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,7 +2,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 1.17;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
