--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,7 +5,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.63;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
