--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,7 +6,7 @@
   font-size: 54px;
   font-weight: 900;
   line-height: 1.1;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
