--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,7 +5,7 @@
   line-height: 1.4;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 1023px) {
