--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,7 @@
   font-size: 30px;
   font-weight: 400;
   line-height: 1.2;
-  color: #ffffff;
+  color: black;
 }
 
 @media screen and (max-width: 1279px) {
