--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,5 +8,5 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  background-color: #2a2c2f;
+  background-color:wheat;
 }
