--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,7 +4,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.63;
-  color: #ffffff;
+  color:black;
 }
 
 .place__paragraph:last-of-type {
