--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,7 +1,7 @@
 .cover__background {
   max-width: 1184px;
   max-height: 740px;
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: url(../../../images/Footer.jfif);
   background-size: cover;
   display: block;
   object-fit: cover;
