--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,7 +6,7 @@
   font-weight: 900;
   line-height: 1.06;
   text-align: center;
-  color: black;
+  color: burlywood;
 }
 
 @media screen and (max-width: 767px) {
